# my-eeg-bci-pipeline

./: .gitignore  README.md  config.py  eeg_constants.py  example_config.json  load_data.py  pre_processing.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DEVELOPMENT.md  bci-domain-notes.md
draft/: pre_processing_draft.py
scripts/: batch_evaluate.py  batch_training.py  build_package.py  convert_mat_labels.py  evaluate.py  params_search_full.py  run_classifier.py  run_ovocsp_feature.py  run_preprocessing.py  search_best_params.py  train.py  training.py
src/: __init__.py
src/classification/: __init__.py  bayesian_classifier.py  classify_pipline.py
src/data_preparation/: __init__.py  artifact_remover.py  data_loader.py  epoch_processor.py  pipeline.py  pre_pipeline.py  pre_processor.py  preprocessor.py
src/evaluation/: __init__.py  evaluator.py
src/feature_extraction/: __init__.py  feature_pipeline.py  ovocsp_feature_extractor.py
src/pipeline/: __init__.py  classify_pipeline.py  feature_pipeline.py  preprocess_pipeline.py
src/utils/: __init__.py  config_loader.py  constants.py  helpers.py  session_config.py
tests/: conftest.py
tests/classification/: test_bayesian_classifier.py
tests/data_preparation/: test_all.py
tests/evaluation/: test_evaluator.py
tests/feature_extraction/: test_ovocsp_extractor.py
tests/pipeline/: test_pipelines.py
tests/scripts/: test_batch_aggregation.py  test_evaluate.py  test_search_full.py  test_search_params.py
tests/utils/: test_constants.py  test_session_config.py
