[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-eeg-bci-pipeline"
version = "0.1.0"
description = "模块化的 EEG-BCI 分类流水线"
requires-python = ">=3.10"
dependencies = [
    "mne>=1.12.0",
    "mne-bids>=0.17.0",
    "moabb>=1.5.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pyriemann>=0.5",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
    "pyyaml>=6.0",
    "notebook",
    "ipykernel",
    "ipython",
    "nbformat",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."
